objects/Hourly_Limit_Log__c.object
<CustomObject>
    <fields>
        <fullName>AnalyticsExternalDataSizeMB_CURRENT__c</fullName>
        <label>AnalyticsExternalDataSizeMB CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnalyticsExternalDataSizeMB_MAX__c</fullName>
        <label>AnalyticsExternalDataSizeMB MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConcurrentAsyncGetReportInstances_CURREN__c</fullName>
        <label>ConcurrentAsyncGetReportInstances CURREN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConcurrentAsyncGetReportInstances_MAX__c</fullName>
        <label>ConcurrentAsyncGetReportInstances MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConcurrentSyncReportRuns_CURRENT__c</fullName>
        <label>ConcurrentSyncReportRuns CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConcurrentSyncReportRuns_MAX__c</fullName>
        <label>ConcurrentSyncReportRuns MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DailyAnalyticsDataflowJobExecutions_CURR__c</fullName>
        <label>DailyAnalyticsDataflowJobExecutions CURR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyAnalyticsDataflowJobExecutions_MAX__c</fullName>
        <label>DailyAnalyticsDataflowJobExecutions MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyAnalyticsUploadedFilesSizeMB_CURREN__c</fullName>
        <label>DailyAnalyticsUploadedFilesSizeMB CURREN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyAnalyticsUploadedFilesSizeMB_MAX__c</fullName>
        <label>DailyAnalyticsUploadedFilesSizeMB MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyApiRequests_CURRENT__c</fullName>
        <label>DailyApiRequests CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyApiRequests_MAX__c</fullName>
        <label>DailyApiRequests MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyAsyncApexExecutions_CURRENT__c</fullName>
        <label>DailyAsyncApexExecutions CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyAsyncApexExecutions_MAX__c</fullName>
        <label>DailyAsyncApexExecutions MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyBulkApiRequests_CURRENT__c</fullName>
        <label>DailyBulkApiRequests CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyBulkApiRequests_MAX__c</fullName>
        <label>DailyBulkApiRequests MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyDurableGenericStreamingApiEvents_CU__c</fullName>
        <label>DailyDurableGenericStreamingApiEvents CU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyDurableGenericStreamingApiEvents_MA__c</fullName>
        <label>DailyDurableGenericStreamingApiEvents MA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyDurableStreamingApiEvents_CURRENT__c</fullName>
        <label>DailyDurableStreamingApiEvents CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyDurableStreamingApiEvents_MAX__c</fullName>
        <label>DailyDurableStreamingApiEvents MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyGenericStreamingApiEvents_CURRENT__c</fullName>
        <label>DailyGenericStreamingApiEvents CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyGenericStreamingApiEvents_MAX__c</fullName>
        <label>DailyGenericStreamingApiEvents MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyStandardVolumePlatformEvents_CURREN__c</fullName>
        <label>DailyStandardVolumePlatformEvents CURREN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyStandardVolumePlatformEvents_MAX__c</fullName>
        <label>DailyStandardVolumePlatformEvents MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyStreamingApiEvents_CURRENT__c</fullName>
        <label>DailyStreamingApiEvents CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyStreamingApiEvents_MAX__c</fullName>
        <label>DailyStreamingApiEvents MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyWorkflowEmails_CURRENT__c</fullName>
        <label>DailyWorkflowEmails CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyWorkflowEmails_MAX__c</fullName>
        <label>DailyWorkflowEmails MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataStorageMB_CURRENT__c</fullName>
        <label>DataStorageMB CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataStorageMB_MAX__c</fullName>
        <label>DataStorageMB MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurableStreamingApiConcurrentClients_CUR__c</fullName>
        <label>DurableStreamingApiConcurrentClients CUR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurableStreamingApiConcurrentClients_MAX__c</fullName>
        <label>DurableStreamingApiConcurrentClients MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter_Name__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(CreatedDate)))&amp;&apos;/&apos;&amp;TEXT(DAY(DATEVALUE(CreatedDate)))&amp;&apos;/&apos;&amp;TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&apos;-&apos;&amp;TEXT(HOUR(TIMEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HourlyAsyncReportRuns_CURRENT__c</fullName>
        <label>HourlyAsyncReportRuns CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyAsyncReportRuns_MAX__c</fullName>
        <label>HourlyAsyncReportRuns MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyDashboardRefreshes_CURRENT__c</fullName>
        <label>HourlyDashboardRefreshes CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyDashboardRefreshes_MAX__c</fullName>
        <label>HourlyDashboardRefreshes MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyDashboardResults_CURRENT__c</fullName>
        <label>HourlyDashboardResults CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyDashboardResults_MAX__c</fullName>
        <label>HourlyDashboardResults MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyDashboardStatuses_CURRENT__c</fullName>
        <label>HourlyDashboardStatuses CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyDashboardStatuses_MAX__c</fullName>
        <label>HourlyDashboardStatuses MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyLongTermIdMapping_CURRENT__c</fullName>
        <label>HourlyLongTermIdMapping CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyLongTermIdMapping_MAX__c</fullName>
        <label>HourlyLongTermIdMapping MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyODataCallout_CURRENT__c</fullName>
        <label>HourlyODataCallout CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyODataCallout_MAX__c</fullName>
        <label>HourlyODataCallout MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyShortTermIdMapping_CURRENT__c</fullName>
        <label>HourlyShortTermIdMapping CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyShortTermIdMapping_MAX__c</fullName>
        <label>HourlyShortTermIdMapping MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlySyncReportRuns_CURRENT__c</fullName>
        <label>HourlySyncReportRuns CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlySyncReportRuns_MAX__c</fullName>
        <label>HourlySyncReportRuns MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyTimeBasedWorkflow_Current__c</fullName>
        <label>HourlyTimeBasedWorkflow Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourlyTimeBasedWorkflow_MAX__c</fullName>
        <label>HourlyTimeBasedWorkflow MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MassEmail_CURRENT__c</fullName>
        <label>MassEmail CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MassEmail_MAX__c</fullName>
        <label>MassEmail MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyPlatformEventsUsageEntitlement_CU__c</fullName>
        <label>MonthlyPlatformEventsUsageEntitlement CU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyPlatformEventsUsageEntitlement_MA__c</fullName>
        <label>MonthlyPlatformEventsUsageEntitlement MA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyPlatformEvents_CURRENT__c</fullName>
        <label>MonthlyPlatformEvents CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyPlatformEvents_MAX__c</fullName>
        <label>MonthlyPlatformEvents MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package2VersionCreates_CURRENT__c</fullName>
        <label>Package2VersionCreates CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package2VersionCreates_MAX__c</fullName>
        <label>Package2VersionCreates MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PermissionSets_CURRENT__c</fullName>
        <label>PermissionSets CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PermissionSets_MAX__c</fullName>
        <label>PermissionSets MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SingleEmail_CURRENT__c</fullName>
        <label>SingleEmail CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SingleEmail_MAX__c</fullName>
        <label>SingleEmail MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StreamingApiConcurrentClients_CURRENT__c</fullName>
        <label>StreamingApiConcurrentClients CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StreamingApiConcurrentClients_MAX__c</fullName>
        <label>StreamingApiConcurrentClients MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Hourly Limit Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HLL-{000}</displayFormat>
        <label>Hourly Limit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hourly Limit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>